--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -11,8 +11,14 @@
         
         <li>
             <div class="collapsible-header">
-                <i class="material-icons">expand_more</i>
-                <strong>{{task.task_name}}</strong> - {{task.due_date}}
+                <div>
+                    <i class="material-icons">expand_more</i>
+                    <a class="waves-effect waves-light btn btn_small">Done</a>
+                    <a class="waves-effect waves-light btn btn_small">Edit</a>
+                </div>
+                <div>
+                    <strong>{{task.task_name}}</strong> - {{task.due_date}}
+                </div>
             </div>
             <div class="collapsible-body">
                 <span>{{task.task_description}}</span>
