--- a/templates/base.html
+++ b/templates/base.html
@@ -13,10 +13,11 @@
 
 <body>
 
+    <div class="container">
+        {% block content %}
 
-	{% block content %}
-
-	{% endblock %}
+        {% endblock %}
+    </div>
 
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
