--- a/templates/base.html
+++ b/templates/base.html
@@ -12,7 +12,24 @@
 </head>
 
 <body>
-
+	<header>
+		<nav>
+			<div class="nav-wrapper">
+				<a href="{{ url_for('get_tasks') }}" class="brand-logo">Task Manager</a>
+				<a href="#" data-target="mobile-demo" class="sidenav-trigger"><i class="material-icons">menu</i></a>
+				<ul id="nav-mobile" class="right hide-on-med-and-down">
+					<li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+					<li><a href="{{ url_for('add_task') }}">New Task</a></li>
+					<li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
+				</ul>
+				<ul class="sidenav" id="mobile-demo">
+					<li><a href="{{ url_for('get_tasks') }}">Home</a></li>
+					<li><a href="{{ url_for('add_task') }}">New Task</a></li>
+					<li><a href="{{ url_for('get_categories') }}">Manage Categories</a></li>
+				</ul>
+			</div>
+		</nav>
+	</header>
     <div class="container">
         {% block content %}
 
@@ -25,10 +42,10 @@
 		$(document).ready(function(){
             $('.collapsible').collapsible();
             $('select').material_select();
+            $('.sidenav').sidenav();
         });
 
-        $(document).ready(function(){
-            $('.datepicker').pickadate({
+        $('.datepicker').pickadate({
                 selectMonths: true,
                 selectYears: 15,
                 today: "Today",
@@ -36,7 +53,6 @@
                 close: "Ok",
                 closeOnSelect: false
             });
-        });
 
         document.getElementById("matfix").addEventListener("click", function(e) {
 	        e.stopPropagation();
